syntax = "proto2";

package storage.proto;

option java_multiple_files = true;
option java_package = "com.fnklabs.dds.table";


enum DataType {
    BOOLEAN = 0;
    BYTE = 1;
    INT = 2;
    LONG = 3;
    FLOAT = 4;
    DOUBLE = 5;
    STRING = 6;
}

message ColumnDefinition {
    required string name = 1;
    required DataType dataType = 2;
    optional bool primary = 3 [default = false];
    required int32 size = 4;
}

message TableDefinition {
    required string name = 1;
    repeated ColumnDefinition column = 2;
}

message Select {
    repeated Selection selection = 1;
    required string table = 2;
    optional Where where = 3;
}

message Insert {
    required string table = 1;
    map<string, bytes> value = 2;

}

message Selection {
    required string column = 1;
    optional AggregationFunction aggregateFunction = 2;
}

message Where {
    repeated Clause clauses = 1;
}

message Clause {
    required string column = 1;
    required Expression expression = 2;
    required bytes value = 3;
}

enum Expression {
    NEQ = 0;
    EQ = 1;
}

enum AggregationFunction {
    COUNT = 0;
}

message ResultSet {
    optional bool wasApplied = 1;

    repeated Row result = 2;
}

message Row {
    map<string, bytes> value = 1;
}